<resources>
    <string name="app_name">CollAct</string>
    <string name="appVersion">v2.1.0.1</string>
    <string name="action_settings">Settings</string>
    <string name="collection_activity">Collection Activity</string>
    <string name="collection_activity_detail">Collection Activity Detail</string>
    <string name="summary_deposit_report">Deposit Report Summary</string>
    <string name="deposit_report">Deposit Report</string>
    <string name="history_payment">History Payment</string>
    <string name="installment_schedule">Installment Schedule</string>
    <string name="installment_schedule_detail">Installment Schedule Detail</string>
    <string name="payment_history">Payment History</string>
    <string name="payment_history_detail">Payment History Detail</string>
    <string name="receipt_history">Receipt History</string>
    <string name="aboutCopyright">Copyright \u00A9 (2015) AdIns</string>
    <string name="enableDevMode">ENABLE DEVELOPER MODE</string>
    <string name="disableDevMode">DISABLE DEVELOPER MODE</string>
    <string name="label_batch_id">Batch ID</string>
    <string name="label_transfer_by">Transfer By</string>
    <string name="label_bank">Bank</string>
    <string name="label_bank_name">Bank Name</string>
    <string name="label_cashier_name">Cashier Name</string>
    <string name="label_account_number">Account Number</string>
    <string name="label_transfer_evidence">Transfer Evidence</string>
    <string name="label_agreement_no">Agreement No</string>
    <string name="label_deposit_amount">Deposit Amount</string>
    <string name="label_recapitulation_list">Recapitulation List</string>
    <string name="label_recapitulate">RECAPITULATE</string>
    <string name="label_recapitulation">Recapitulation</string>
    <string name="label_total_task">Total Task</string>
    <string name="label_total_paid">Total Paid</string>
    <string name="label_total_visit">Total Visit</string>
    <string name="label_total_fail">Total Fail</string>
    <string name="label_paid">PAID</string>
    <string name="label_visit">VISIT</string>
    <string name="label_fail">FAIL</string>
    <string name="label_detail">Detail</string>
    <string name="label_account_number_2">Account Number :</string>
    <string name="label_cashier_name_2">Cashier Name :</string>
    <string name="label_bank_name_2">Bank Name :</string>
    <string name="label_batch_id_2">Batch ID :</string>
    <string name="label_transfer_evidence_2">Transfer Evidence :</string>
    <string name="label_type_dep_name">Type of Deposit</string>
    <string name="label_branch_payment">Branch Payment :</string>
    <string name="branch_payment_hint">Branch Payment</string>
    <string name="label_transfer_to">Transfer to :</string>
    <string name="label_transfer_evidence_pc">Payment Evidence :</string>
    <string name="label_form">Form :</string>
    <string name="label_info_batch">Info Batch</string>
    <string name="label_type_deposit">Types Of Deposit :</string>
    <string name="label_info_form">Form\'s name</string>
    <string name="label_info_submitdate">Submit date</string>
    <string name="label_info_total">Total</string>
    <string name="label_transfer_to_pc">Pay to :</string>
    <string name="label_transactioncode">Transaction\'s code :</string>
    <string name="label_no_trasaction">No. Transaction</string>
    <string name="label_channel_name">Channel Name</string>
    <string name="label_agreement_number">Agreement Number :</string>
    <string name="label_activity_date">Activity Date</string>
    <string name="label_action">Activity</string>
    <string name="label_collection_number">Collector Name</string>
    <string name="label_no">No</string>
    <string name="label_field">Field</string>
    <string name="label_value">Value</string>
    <string name="failed_get_data_try_again">Fail to get data. Please try again later</string>
    <string name="label_due_date">Due Date</string>
    <string name="label_amount_installment">Installment Amount</string>
    <string name="label_amount_paid">Amount Paid</string>
    <string name="label_transaction_code">Transaction\nType</string>
    <string name="label_posting_date">Post\nDate</string>
    <string name="label_amount_paid_2">Receive\nAmount</string>
    <string name="label_amount_installment_2">Installment\nAmount</string>
    <string name="label_transaction_code_2">Transaction Code :</string>
    <string name="label_no_2">NO</string>
    <string name="label_receipt_form_no">RECEIPT\nFORM NO</string>
    <string name="label_value_date">VALUE\nDATE</string>
    <string name="label_post_date">POST\nDATE</string>
    <string name="label_payment_amount">PAYMENT\nAMOUNT</string>
    <string name="label_installment_amount">INSTALLMENT\nAMOUNT</string>
    <string name="label_installment_number">INSTALLMENT\nNUMBER</string>
    <string name="label_wop_code">WOP CODE</string>
    <string name="label_payment_allocation_name">PAYMENT\nALLOCATION NAME</string>
    <string name="label_os_amount">OS AMOUNT\nOVER DUE\nAS OF</string>
    <string name="label_receive_amount">RECEIVE\nAMOUNT</string>
    <string name="label_contract_number">Contract Number</string>
    <string name="label_receipt_number">Receipt Number</string>
    <string name="label_payment_date">Payment Date</string>
    <string name="label_file">File</string>
    <string name="summary_kunjungan">Visit Summary</string>
    <string name="label_tanggal">Date</string>
    <string name="dummy_tanggal">21102014</string>
    <string name="label_collector">Collector</string>
    <string name="dummy_collector">Schinalon</string>
    <string name="label_total_collected">Total to be Collected</string>
    <string name="dummy_total_collected">Rp550.000</string>
    <string name="dummy_total_paid">Rp98.000</string>
    <string name="dashboard_competition_page_title">List Detail Programs</string>
    <string name="my_point_competition">My Points (%1$s)</string>
    <string name="monthly_point_page_title">Monthly Points Acquisition</string>
    <string name="daily_point_page_title">Daily Points Acquisition</string>
    <string name="daily_point_chart_title">Points Earned In %1$s</string>
    <string name="average_point">Average: %1$d</string>
    <string name="y_axis_point_title">Total Points</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="btnLookupCMO">Lookup CMO</string>
    <string name="btnLookupCMOMH">Lookup CMO / MH</string>
    <string name="lblSearchBy">Search by</string>
    <string name="lblStartDate">Start Date</string>
    <string name="lblEndDate">End Date</string>
    <string name="lblNomorOrder">Nomor Order</string>
    <string name="btnSearchOrder">Search</string>
    <string name="menu">Main Menu</string>
    <string name="cekOrder">Check Order</string>
    <string name="btnOpen">Open</string>
    <string name="lblSearchByStatus">Status</string>
    <string name="btnOk">OK</string>
    <string-array name="cbSearcrBy">
        <item>Date</item>
        <item>Nomor Order</item>
    </string-array>
    <string-array name="cbSearcrByStatus">
        <item>ALL</item>
        <item>On Survey</item>
        <item>On CA</item>
    </string-array>
    <string-array name="cbUpdateOrder">
        <item>Open Order</item>
        <item>Cancel Order</item>
    </string-array>
    <string name="title_mn_home">HOME</string>
    <string name="title_mn_tasklist">TASK LIST</string>
    <string name="title_mn_log">LOG</string>
    <string name="title_mn_reportsummary">REPORT SUMMARY</string>
    <string name="title_mn_depositreport">DEPOSIT REPORT</string>
    <string name="title_mn_absentin">ATTENDANCE IN</string>
    <string name="title_mn_synchronize">SYNCHRONIZE</string>
    <string name="title_mn_about">ABOUT</string>
    <string name="title_mn_exit">EXIT</string>
    <string name="title_mn_newtask">NEW TASK</string>
    <string name="title_mn_changepassword">CHANGE PASSWORD</string>
    <string name="title_mn_paymenthistory">PAYMENT HISTORY</string>
    <string name="title_mn_collectionactivity">COLLECTION ACTIVITY</string>
    <string name="title_mn_installmentschedule">INSTALLMENT SCHEDULE</string>
    <string name="title_mn_paymenthistorydet">PAYMENT HISTORY DETAIL</string>
    <string name="title_mn_collectionactivitydet">COLLECTION ACTIVITY DETAIL</string>
    <string name="title_mn_installmentscheduledet">INSTALLMENT SCHEDULE DETAIL</string>
    <string name="title_mn_absentout">CHECK OUT</string>
    <string name="title_mn_setting">Settings</string>
    <string name="title_mn_guide">Repeat User Guide</string>
    <string name="header__title">Change Header Picture</string>
    <string name="profile__title">Change Profile Picture</string>
    <string name="btnTransfer">TRANSFER</string>
    <string name="btnSend">SEND</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnReject">REJECT</string>
    <string name="btnChange">CHANGE</string>
    <string name="sync_scheme">Synchronize Scheme</string>
    <string name="sync_question_set">Synchronize Question Set</string>
    <string name="sync_lookup">Synchronize Lookup</string>
    <string name="sync_holiday">Synchronize Holiday</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="sync_progress">Progress : 0%</string>
    <string-array name="transfer_spinner">
        <item>By Bank</item>
        <item>By Cashier</item>
    </string-array>
    <string name="divider_dash">-</string>
    <string name="divider_colon">:</string>
    <string name="divider_equals_sign">=</string>
    <string name="dummy_number"> -</string>
    <string name="dummy_text"> -</string>
    <string name="title">Title</string>
    <string name="take_a_photo">TAKE A PHOTO</string>
    <string name="dummy_news_desc">Textview</string>
    <string name="news_not_found">News not found</string>
    <string name="dummy_customer_name">Customer Name</string>
    <string name="login_desc">Login to CollAct Application</string>
    <string name="emergency_sent">Message Sent !</string>
    <string name="emergency_sent_description">Collector is in emergency mode</string>
    <string name="toast_crash">Ooooops ! MSSCOLL crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="title_activity_developer_option">Dev Options</string>
    <string name="changelog_v230"><![CDATA[Changes: <br/>
1. Support Multilingual <br/>
2. Update compatibility for Android M <br/>
3. Support refresh location by tap GPS Icon <br/>
4. Increase performance <br/>
5. Decrease memory usage <br/>
6. Add cirle radius in map viewer if accuracy available <br/>
7. Loading not relevant Questions automatically <br/>
8. Support Copy value from other questions <br/>
9. Support advanced question validation <br/>
10. Add parameterized Limit Cash On Hand  <br/>
11. Search by form name in task list <br/>
12. Add Closing Task Feature <br/>
13. Add Receive Voucher
]]></string>
    <string name="changelog_v200"><![CDATA[Changes: <br/>
1. Add support for Timeline Task <br/>
2. Add support for navigation menu]]></string>
    <string name="changelog_v210"><![CDATA[Changes: <br/>
1. Add Support for View All header in tasklist<br/>
2. Add support maps viewer for tasklist]]></string>
    <string name="changelog_v220"><![CDATA[Changes: <br/>
1. Add Support for Oauth<br/>
2. Add support for more bluetooth Printer]]></string>
    <string name="title_mn_closing_task">CLOSING TASK</string>
    <string name="msg_still_uploading_closing_task">Can\'t Closing Task Because Still Uploading Data or there\'s task on draft</string>
    <string name="contract_number">Contract Number</string>
    <string name="lkp_number">LKP Number</string>
    <string name="changelog_v2310"><![CDATA[Changes: <br/>
1. Support copy value with condition<br/>
2. Support RV in Question
]]></string>
</resources>