<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tv_white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_history"
                android:textSize="24sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <TableLayout
                    android:id="@+id/tableHeaders"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:stretchColumns="3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_background"
                        android:gravity="center_vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:gravity="center_vertical"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/label_contract_number"
                            android:textColor="@color/tv_white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:gravity="center_vertical"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/label_receipt_number"
                            android:textColor="@color/tv_white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:gravity="center_vertical"
                            android:minWidth="70dp"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/label_payment_date"
                            android:textColor="@color/tv_white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:gravity="center_vertical"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/label_file"
                            android:textColor="@color/tv_white"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
